# better-cmd-text

./: LICENSE  README.md  main.pdat  main.py  pyproject.toml
bettercmd/: __init__.py  core.py
bettercmd.egg-info/: PKG-INFO  SOURCES.txt
cmdstyler/: __init__.py  core.py
cmdstyler.egg-info/: PKG-INFO  SOURCES.txt
cmdstyler/cursor/: __init__.py
cmdstyler/display/: __init__.py
cmdstyler/text/: __init__.py
