[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bettercmd"
version = "0.1.0"
description = "Better CMD text utilities, uses the pdat file format"
authors = [{ name = "Philipp Vukovic", email = "philovic@outlook.de" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "sty>=1.0.5",]
